# web-app

./: .env  .gitignore  README.md  __main__.py  block_main.py  config_reader.py  pyproject.toml  requirements.txt
callbacks/: __init__.py  simple.py
filters/: __init__.py  is_admin.py  is_digit.py
handlers/: __init__.py  start.py
keyboards/: factories.py  reply.py
middlewares/: __init__.py  subscription_checker.py  throttling.py
states/: __init__.py  user.py
static/: style.css
templates/: base.html  delete.html  edit.html  login.html  post.html  style1.css
